fixed spacing on patterns page and added more to patterns and pattern reading

--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,10 @@ footer p {
   margin-left: 1em;
 }
 
+.a_margin{
+  margin:0.5em;
+}
+
 
 
 /* ================================
